2010-02-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/model/couch.py:
	  Don't invoke datetime.datetime.now() in the class definition,
	  since that makes us create tasks with a start date of when the
	  program was started, not now.

2010-01-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/replicate.py:
	  Allow specifying the port.

2009-12-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py:
	  Unbreak search for titles.

2009-12-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* couchdb/shows/thing.js:
	* couchdb/templates/thing.html:
	  Use mustache.  Use a dirty trick to do object property access
	  in templates.

2009-12-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/replicate.py:
	  Catch another possible exception.

2009-12-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* data (added):
	* data/mushin-maemo.desktop (added):
	  Add a desktop file.

2009-12-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* setup.py (added):
	  Add a setup.py to package.

2009-12-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/display.py:
	* python/mushin/command/main.py:
	  Properly handle not having any results at all for title.

2009-12-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py:
	  Handle the case where there really are no tasks found anymore for
	  the given urgency, and so we shouldn't show any open things.

2009-12-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/common/app.py:
	  Add a limit kwarg for due and overdue so we can get shorter lists.
	  Remove duplicate functions.
	* python/mushin/maemo/things.py:
	  Add deadline info to list of things.
	* python/mushin/maemo/start.py:
	  Add lists for due this week.
	* python/mushin/maemo/show.py: