@@ -1,3 +1,11 @@
+2010-02-23  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* python/mushin/model/couch.py:
+	  Don't default start to datetime.datetime.now; this avoids things
+	  with no start set to be shown as started today.
+	* python/mushin/command/main.py:
+	  Always set start when adding a thing.
+
 2010-02-01  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* python/mushin/model/couch.py:
